--- a/client/src/components/AddSheetModal.css
+++ b/client/src/components/AddSheetModal.css
@@ -1,34 +1,34 @@
 /* AddModalButton.css */
 .add-modal-button {
-	position: fixed; /* Fixes it in place */
-	bottom: 30px; /* Distance from the bottom */
-	right: 30px; /* Distance from the right */
-	width: 60px; /* Width of the button */
-	height: 60px; /* Height of the button */
-	background-color: #6200ea; /* Material Design primary color */
-	color: white; /* Icon color */
-	border: none; /* Remove default border */
-	border-radius: 50%; /* Makes the button round */
-	font-size: 24px; /* Icon size */
+	position: fixed; 
+	bottom: 30px; 
+	right: 30px; 
+	width: 60px; 
+	height: 60px; 
+	background-color: #6200ea; 
+	color: white; 
+	border: none; 
+	border-radius: 50%; 
+	font-size: 24px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* Shadow for material look */
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); 
 	cursor: pointer;
-	transition: background-color 0.3s, box-shadow 0.3s; /* Smooth transitions */
+	transition: background-color 0.3s, box-shadow 0.3s; 
   }
   
   .add-modal-button:hover {
-	background-color: #3700b3; /* Darken the button on hover */
-	box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4); /* Increase shadow on hover */
+	background-color: #3700b3;
+	box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4); 
   }
   
   .add-modal-button:active {
-	background-color: #3700b3; /* Keep the same color when clicked */
-	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* Keep shadow on active */
+	background-color: #3700b3; 
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); 
   }
   
   .material-icons {
-	font-size: 32px; /* Icon size */
+	font-size: 32px; 
   }
   
