--- a/client/src/components/SheetModal.css
+++ b/client/src/components/SheetModal.css
@@ -23,7 +23,7 @@
   
   .sheet-form {
 	display: grid;
-	grid-template-columns: 1fr; /* Two columns */
+	grid-template-columns: 1fr; 
 	gap: 10px;
 	padding: 10px;
   }
@@ -38,13 +38,13 @@
 	padding: 8px;
 	border: 1px solid #ccc;
 	border-radius: 5px;
-	width: 100%; /* Make sure inputs stay within their container */
+	width: 100%; 
   }
 
   .bio-area {
-	width: 100%; /* Takes full width of the form */
-	height: 250px; /* Adjust this to make it bigger */
-	resize: vertical; /* Allows user to resize it vertically */
+	width: 100%; 
+	height: 250px; 
+	resize: vertical; 
 	padding: 10px;
 	border: 1px solid #ccc;
 	border-radius: 5px;
